# telco-customer-churn

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  commitmsg.txt  pyproject.toml  test.py
configs/: columns.yaml  params.yaml  paths.yaml  schema.yaml
data/: README.md
reports/: ingest_meta.json
scripts/: cast_hygiene.py  guard_non_features.py  key_duplicate.py  leakage_check.py  profile_label_missingness.py  profile_overview_columns_notes.py  run_log_sanity.py  validate_schema.py
